[java] upgrade to java 21 (#1655)
* [java] upgrade github actions to java 21

* [java] upgrade DockerFile to java 21

* [java] update readme to java 21

* [java] upgrade benchmark compilation target to java 21

* [mvn] bump maven-dependency-plugin for compat with java 21

* use new SequencedCollection api

* add pattern matching with switch example

* fix docker style warning